Update championship data

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -83,7 +83,7 @@
   </p>
 
   <p class="small">
-    3. Runde - SV Geistthal : HV TDP Stainz 2:7
+    1. Runde - SV Geistthal : HV TDP Stainz 2:7
   </p>
 
   <p class="small">
@@ -95,22 +95,26 @@
   </p>
 
   <p class="small">
-    4. Runde - HV TDP Stainz : STT Multitask 2:4
+    3. Runde - HV TDP Stainz : STT Multitask 2:4
   </p>
 
   <p class="small">
-    5. Runde - HV TDP Stainz : STT Wörgötter 3:4
+    4. Runde - HV TDP Stainz : STT Wörgötter 3:4
   </p>
 
-
   <p class="small">
-    6. Runde - St. Johann/Köppling : HV TDP Stainz 1:1
+    5. Runde - St. Johann/Köppling : HV TDP Stainz 1:1
   </p>
 
   <p class="small">
     Cup Viertelfinale - HV TDP Stainz : STT Mauser 3:2
   </p>
 
+  <p class="small">
+    6. Runde - STT Pichler : HV TDP Stainz 3:1
+  </p>
+
+  <!--
   <br>
 
   <p class="normal">
@@ -123,6 +127,8 @@
     1. Runde - SAMSTAG, 28.10.2023 - 17:00 Uhr - Sportplatz Södingberg - STT Pichler : HV TDP Stainz
   </p>
   <hr>
+
+  -->
 
   <!-- <p class="normal">14. Runde - FREITAG, 15.07.2022 - 18:30 Uhr - Sportplatz Södingberg - STT Pichler vs. HV TDP Stainz</p> -->
   <br>
