--- a/src/app/surveys/surveys.component.html
+++ b/src/app/surveys/surveys.component.html
@@ -1,13 +1,20 @@
-
+<!--
 <div id="surveyhero-embed-qexyachf"></div>
 <script src="https://embed-cdn.surveyhero.com/js/user/embed.qexyachf.js" async></script>
-<!--
+-->
 
-<div *ngIf="surveyLink && surveyLink.length > 0" class="h_iframe">
+<!-- <div *ngIf="surveyLink && surveyLink.length > 0" class="h_iframe">
     &nbsp;
     <iframe [src]="surveyUrl()" frameborder="0" allowfullscreen height="1700">
     </iframe>
   </div>
 
+  <br> -->
+
+  <div id="surveyhero-embed-xf7prdny"></div>
+  <script src="https://embed-cdn.surveyhero.com/js/user/embed.xf7prdny.js" async></script>
+
+  <!-- <div id="{{ surveyId }}"></div>
+  <script [src]="surveyUrl()" async></script> -->
   <br>
-  -->
+  <br>
