--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -53,7 +53,8 @@
 
       <button mat-menu-item [matMenuTriggerFor]="goaloftheseason"><span class="fa fa-list-ol fa-sm"></span> Tor der Saison</button>
       <mat-menu #goaloftheseason="matMenu">
-        <button mat-menu-item routerLink="/goaloftheseason/2022-2023">Tor der Saison 2022</button>
+        <button mat-menu-item routerLink="/goaloftheseason/2022">Tor der Saison 2022</button>
+        <button mat-menu-item routerLink="/goaloftheseason/2023">Tor der Saison 2023</button>
       </mat-menu>
 
       <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting Eleven</button>
@@ -109,7 +110,8 @@
 
       <button mat-menu-item [matMenuTriggerFor]="goaloftheseason"><span class="fa fa-list-ol fa-sm"></span> Tor der Saison</button>
       <mat-menu #goaloftheseason="matMenu">
-        <button mat-menu-item routerLink="/goaloftheseason/2022-2023">Tor der Saison 2022</button>
+        <button mat-menu-item routerLink="/goaloftheseason/2022">Tor der Saison 2022</button>
+        <button mat-menu-item routerLink="/goaloftheseason/2023">Tor der Saison 2023</button>
       </mat-menu>
 
       <button mat-menu-item [mat-menu-trigger-for]="more"><mat-icon>menu</mat-icon></button>
