update team photo

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -156,6 +156,11 @@
 
    <br>
 
+   <h2 class="header">Mannschaftsfoto 2023</h2>
+   <div fxFlex="50" fxFlexOffset="10px">
+     <img class="center" src="assets/images/aboutus/2023_Mannschaft.jpg">
+   </div>
+
    <h2 class="header">Mannschaftsfoto 2022</h2>
    <div fxFlex="50" fxFlexOffset="10px">
      <img class="center" src="assets/images/aboutus/2022_Mannschaft.jpg">
