--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -58,7 +58,13 @@
       </mat-menu>
 
       <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting Eleven</button>
-      <button mat-menu-item routerLink="/advent" routerLinkActive="active"><span class="fa fa-candy-cane fa-sm"></span> Adventkalender</button>
+
+      <button mat-menu-item [matMenuTriggerFor]="advent"><span class="fa fa-candy-cane fa-sm"></span> Adventkalender</button>
+      <mat-menu #advent="matMenu">
+        <button mat-menu-item routerLink="/advent/2021">Advent 2021</button>
+        <button mat-menu-item routerLink="/advent/2023">Advent 2023</button>
+      </mat-menu>
+
       <!-- <button mat-menu-item routerLink="/halloffame" routerLinkActive="active"><span class="fa fa-award fa-sm"></span> Hall of Fame</button> -->
     </mat-menu>
 
@@ -120,7 +126,12 @@
             <button mat-menu-item routerLink="/surveys" routerLinkActive="active"><span class="fa fa-list-ol fa-sm"></span> Umfragen</button>
 
             <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting Eleven</button>
-            <button mat-menu-item routerLink="/advent" routerLinkActive="active"><span class="fa fa-candy-cane fa-sm"></span> Adventkalender</button>
+
+            <button mat-menu-item [matMenuTriggerFor]="advent"><span class="fa fa-candy-cane fa-sm"></span> Adventkalender</button>
+            <mat-menu #advent="matMenu">
+              <button mat-menu-item routerLink="/advent/2021">Advent 2021</button>
+              <button mat-menu-item routerLink="/advent/2023">Advent 2023</button>
+            </mat-menu>
             <!-- <button mat-menu-item routerLink="/halloffame" routerLinkActive="active"><span class="fa fa-award fa-sm"></span> Hall of Fame</button> -->
       </mat-menu>
     </div>
