--- a/src/app/advent/advent.component.html
+++ b/src/app/advent/advent.component.html
@@ -1,17 +1,28 @@
-<h1 class="large header">Adventkalender</h1>
+<h1 class="large header">Online Adventkalender</h1>
 
 <p class="normal center" style="text-align: center;">
-  Premiere! Die Weihnachtszeit ist ja die ruhigste des Jahres! Wir nutzen sie dazu um das Fußballjahr etwas Revue passieren zu lassen.
   <span *ngIf="season == '2021'">
+    Premiere! Die Weihnachtszeit ist ja die ruhigste des Jahres! Wir nutzen sie dazu um das Fußballjahr etwas Revue passieren zu lassen.<br><br>
+
     Mit dem HV TDP Stainz Sport Adventkalender stellen wir euch jeden Tag einen Spieler aus dem Meisterschaftskader vor.
+    <br><br>
+    Schaut jeden Tag auf unserer Homepage vorbei und seid gespannt! 😉
   </span>
 
   <span *ngIf="season == '2023'">
-    Mit dem HV TDP Stainz Sport Adventkalender stellen wir euch jeden Tag ein Tor aus der Saison 2022/2023 vor.
+    Die Weihnachtszeit ist ja die ruhigste des Jahres! Doch nicht bei uns!<br><br>
+
+    Wir wollen die Zeit nutzen, um das vergangene Fußballjahr mit einer der schönsten Sachen im Fußball Revue passieren zu lassen. Es geht heuer um Tore!<br><br>
+
+    Mit dem HV TDP Stainz „Tor Adventkalender“ stellen wir euch jeden Tag eines unserer schönsten Tore aus dem letzten Jahr vor.<br><br>
+
+    Ab Tag 11 beginnen wir mit den Toren aus dem Fanvoting von der „Wahl zum Tor des Jahres 2023“.<br><br>
+
+    Die Reihenfolge der Tore findet nach dem Endergebnis des Votings statt und endet mit dem 1. Platz am 24. Dezember.
+    <br><br>
+    Schaut daher jeden Tag auf unserer Homepage vorbei und seid gespannt! 😉
   </span>
 
-  <br><br>
-  Schaut jeden Tag auf unserer Homepage vorbei und seid gespannt! 😉
 </p>
 
 <br>
