Update 10-Jahresfeier with latest content

--- a/src/app/zehnjahresfeier/zehnjahresfeier.component.html
+++ b/src/app/zehnjahresfeier/zehnjahresfeier.component.html
@@ -22,44 +22,60 @@
               </p>
 
               <p class="normal">
-                Wir beginnen den Tag nach dem Einlass um 11:07 Uhr (ganz nach unserem Gründungsdatum) mit einer kleinen Warm Up Party. 🍺
+                <u><b>Programmübersicht</b></u>
               </p>
 
               <p class="normal">
-                Im Anschluss folgt dann um 16:00 Uhr das sportliche Highlight des Tages - Wir bestreiten ein Freundschaftsspiel gegen die <a href="https://fk-austria.at/teams/allstars/kader" target="_blank">FK Austria Wien Allstars</a>! 🟣⚪️<br>
-                Die ehemaligen Nationalteamspieler Toni Pfeffer, Markus Suttner, Andreas Lasnik und viele mehr kommen nach Stainz! ⚽️
+                <b>11:07 Uhr - Einlass</b>
+              </p>
+              <hr>
+
+              <p class="normal">
+                Für die ersten 75 Zuschauer gibt es ein „Willkommensgeschenk“. 🎁<br>
+                Weiters gibt es Freibier für alle (solange der Vorrat reicht!) 🍻<br>
               </p>
 
               <p class="normal">
-                Zum krönenden Abschluss sorgen ab 19:00 Uhr "Die Schilcherlandbuam" für die nötige Partystimmung am Abend! 🍻🎉
+                <b>11:30 Uhr: "Warm up Sommerparty"</b>
+              </p>
+              <hr>
+              <p class="normal">
+                DJ TomTru eröffnet den Tag und heizt euch mit Sommerhits und Partyschlager ein! 🎉<br>
               </p>
 
               <p class="normal">
-                Der Vorverkauf der Eintrittskarten hat begonnen!<br>
-                Sichert euch eine Karte! Wir freuen uns auf euch!
+                <b>16:00 Uhr: Freundschaftsspiel HV TDP Stainz : <a href="https://fk-austria.at/teams/allstars/kader" target="_blank">FK Austria Wien Allstars</a></b>
+              </p>
+              <hr>
+              <p class="normal">
+                Das sportliche Highlight des Tages - die ehemaligen Nationalteamspieler und FK Austria Wien Legenden kommen nach Stainz! 🟣⚪<br>
+                Toni Pfeffer, Markus Suttner, Andreas Lasnik, Paul Scharner, Florian Klein, Andi Ogris und und und…..<br>
+                Fußballherz was willst du mehr?!? Eine einzigartige Möglichkeit den ehemaligen Fußballprofis noch einmal genau auf die Beine schauen zu können! ⚽<br>
               </p>
 
               <p class="normal">
-                Programmübersicht.....
+                <b>19:00 Uhr: Live Musik "Die Schilcherlandbuam"</b>
+              </p>
+              <hr>
+              <p class="normal">
+                Das musikalische Highlight des Tages - JUNG, FRECH, STEIRISCH - Ganz nach diesem Motto sorgen „Die Schilcherlandbuam“ auf der Bühne jedes Mal für Partystimmung. Wir holen die Band nach Stainz und lassen den Tag mit diesem musikalischen Kracher ausklingen!
+              </p>
+
+              <hr>
+              <p class="normal">
+                Sichert euch eure Eintrittskarte und seid dabei! 😎
               </p>
 
               <p class="normal">
-                  ✅ 11:07 Uhr -> Einlass<br>
-                  ✅ 12:00 Uhr -> "Warm Up" - Sommerparty<br>
-                  ✅ 16:00 Uhr -> Jubiläumsfreundschaftsspiel HV TDP Stainz : FK Austria Wien Allstars<br>
-                  ✅ 19:00 Uhr -> Live Musik "Die Schilcherlandbuam"<br>
-                <br>
+                <u><b>Vorverkaufsstellen</b></u>
               </p>
 
               <p class="normal">
-                Vorverkaufsstellen.....
-              </p>
-
-              <p class="normal">
-                ▶️ bei allen Spielern vom HV TDP Stainz<br>
-                ▶️ bei allen Heimspielen vom HV TDP Stainz<br>
-                ▶️ online unter www.hvtdpstainz.at<br>
-                ▶️ Trafik Schauer<br><br>
+                🎫 bei allen Spielern und bei den Heimspielen des HV TDP Stainz<br>
+                🎫 online unter www.hvtdpstainz.at<br>
+                🎫 Restaurant Mediterran in Stainz<br>
+                🎫 Trafik Schauer in Stainz<br>
+                🎫 Gasthaus Orthacker in Straßgang (Am Buchkogel)<br><br>
                 💵 12 Euro (Vorverkauf)<br>
                 💵 15 Euro (Abendkasse - falls vorhanden)<br>
             </p>
