Add new sponsor to footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,10 @@
-<div class="container footer" 
-    fxLayout="row wrap" 
-    fxLayout.sm="column wrap" 
-    fxLayout.xs="column wrap" 
+<div class="container footer"
+    fxLayout="row wrap"
+    fxLayout.sm="column wrap"
+    fxLayout.xs="column wrap"
     fxLayoutAlign.sm="start center"
-    fxLayoutAlign.xs="start center" 
-    fxLayoutAlign.gt-sm="center center" 
+    fxLayoutAlign.xs="start center"
+    fxLayoutAlign.gt-sm="center center"
     fxLayoutGap="10px">
 
   <div fxFlex="100%" fxFlex.gt-sm="45%">
@@ -26,7 +26,7 @@
     </div>
 
     <br>
-    
+
     <table align="center">
       <tr>
         <td>
@@ -40,11 +40,17 @@
               <img class="imageSmallCenter" src="assets/images/tdp.jpg" style="height: 80px; width: 180px;">
             </a>
         </td>
+        <td>&nbsp;</td>
+        <td>
+          <a href="https://dangraz.at/" target="blank">
+            <img class="imageSmallCenter" src="assets/images/dan_logo.jpeg" style="height: 80px; width: 150px;">
+          </a>
+        </td>
       </tr>
     </table>
 
     <div style="text-align:center;">
-      <p><a href="https://github.com/sjaindl" target="_blank">© 2018-2021 Stefan Jaindl</a></p>
+      <p><a href="https://github.com/sjaindl" target="_blank">© 2018-2024 Stefan Jaindl</a></p>
     </div>
   </div>
 </div>
