Add 2024 to gallery

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,6 +21,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="gallery"><span class="fa fa-camera fa-sm"></span> Galerie</button>
       <mat-menu #gallery="matMenu">
+          <button mat-menu-item routerLink="/gallery/2024">2024</button>
           <button mat-menu-item routerLink="/gallery/2023">2023</button>
           <button mat-menu-item routerLink="/gallery/2022">2022</button>
           <button mat-menu-item routerLink="/gallery/2021">2021</button>
@@ -88,6 +89,7 @@
 
       <button mat-menu-item [matMenuTriggerFor]="gallery"><span class="fa fa-camera fa-sm"></span> Galerie</button>
       <mat-menu #gallery="matMenu">
+          <button mat-menu-item routerLink="/gallery/2024">2024</button>
           <button mat-menu-item routerLink="/gallery/2023">2023</button>
           <button mat-menu-item routerLink="/gallery/2022">2022</button>
           <button mat-menu-item routerLink="/gallery/2021">2021</button>
