feat(hallenturnier): Update content

--- a/src/app/hallenturnier/hallenturnier.component.html
+++ b/src/app/hallenturnier/hallenturnier.component.html
@@ -18,7 +18,7 @@
               </p>
               <p class="normal">
                 📅 WANN <br>
-                Samstag, 11.01.2025 (Vorrunde am Vormittag) <br>
+                Samstag, 11.01.2025 (Erweiterung auf Freitag 10.01. bei entsprechender Teilnehmerzahl möglich) <br>
               </p>
 
               <p class="normal">
