--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,6 +16,7 @@
       </mat-menu>
 
       <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button>
+      <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button>
 
       <!-- <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button> -->
 
@@ -84,6 +85,7 @@
       </mat-menu>
 
       <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button>
+      <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button>
 
       <!--  <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button> -->
 
