--- a/src/styles.css
+++ b/src/styles.css
@@ -115,9 +115,13 @@ body {
     background-position: left top; */
 }
 
-h1.header, h2.header, h3.header, h4.header {
+h1.header, h2.header, h3.header {
     text-align: center;
     text-decoration: underline;
+}
+
+h4.header {
+  text-align: center;
 }
 
 .center {
