feat(goldenshot): Adapt html content

--- a/src/app/goldenshot/goldenshot.component.html
+++ b/src/app/goldenshot/goldenshot.component.html
@@ -149,7 +149,7 @@
 
 <div *ngIf="submittedFormData">
   <div>
-    <h2>Wir haben deine Anmeldung erhalten, Vielen Dank! Wir melden uns bei dir in Kürze.</h2>
+    <h2>Wir haben deine Anmeldung erhalten, Vielen Dank!</h2>
     <p>Vorname: {{submittedFormData.firstName}}</p>
     <p>Nachname: {{submittedFormData.lastName}}</p>
     <p>E-Mail: {{submittedFormData.email}}</p>
