--- a/src/app/zehnjahresfeier/zehnjahresfeier.component.html
+++ b/src/app/zehnjahresfeier/zehnjahresfeier.component.html
@@ -75,13 +75,9 @@
                 🎫 online unter www.hvtdpstainz.at<br>
                 🎫 Restaurant Mediterran in Stainz<br>
                 🎫 Trafik Schauer in Stainz<br>
-                🎫 Gasthaus Orthacker in Straßgang (Am Buchkogel)<br><br>
-                💵 12 Euro (Vorverkauf)<br>
-                💵 15 Euro (Abendkasse - falls vorhanden)<br>
-            </p>
-
-            <p class="normal">
-              Die Tickets werden GRATIS per Post versendet (Mindestbestellmenge: 2 Tickets)!
+                🎫 Gasthaus Orthacker in Straßgang (Am Buchkogel)<br>
+                <!-- 💵 12 Euro (Vorverkauf)<br> -->
+                <!-- 💵 15 Euro (Abendkasse - falls vorhanden)<br> -->
             </p>
 
             </div>
@@ -95,77 +91,12 @@
       </div>
 
       <div fxFlex fxFlexOffset="20px" class="form-size small" >
-        <h3>Sichere dir deine Tickets gleich jetzt ⬇</h3>
-        <!-- <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p> -->
-        <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" style="background-color: darkblue;color: rgba(255,255,255,.7);border: 27.4px solid;">
-          <p>
-            <mat-form-field class="full-width"
-            color="{{(formErrors.firstname) ? 'warn' : 'primary'}}">
-              <input class="formElement" matInput type="text" formControlName="firstname" placeholder="Vorname" required>
-              <mat-hint>
-                <span [hidden]="!(formErrors.firstname)">
-                  {{formErrors.firstname}}</span>
-              </mat-hint>
-            </mat-form-field>
-            <mat-form-field class="full-width"
-             color="{{(formErrors.lastname) ? 'warn' : 'primary'}}">
-              <input class="formElement" matInput formControlName="lastname" placeholder="Nachname" type="text" required>
-              <mat-hint>
-                <span [hidden]="!(formErrors.lastname)">
-                  {{formErrors.lastname}}</span>
-              </mat-hint>
-            </mat-form-field>
-          </p>
-          <p>
-            <mat-form-field class="full-width" color="primary">
-            <!-- color="{{(formErrors.email) ? 'warn' : 'primary'}}"> -->
-              <input matInput formControlName="email" placeholder="E-Mail" type="email"> <!-- email required
-              <mat-hint>
-                <span [hidden]="!(formErrors.email)">
-                  {{formErrors.email}}</span>
-              </mat-hint>
-              -->
-            </mat-form-field>
-          </p>
+      <h3>Sichere dir deine Tickets gleich jetzt ⬇</h3>
+    </div>
 
-          <p>
-            <mat-form-field class="full-width"
-            color="{{(formErrors.address) ? 'warn' : 'primary'}}">
-              <input class="formElement" matInput type="text" formControlName="address" placeholder="Adresse" required>
-              <mat-hint>
-                <span [hidden]="!(formErrors.address)">
-                  {{formErrors.address}}</span>
-              </mat-hint>
-            </mat-form-field>
-
-          </p>
-
-          <p>
-            <mat-form-field class="full-width"
-            color="{{(formErrors.ticketcount) ? 'warn' : 'primary'}}">
-              <input class="formElement" matInput type="text" formControlName="ticketcount" placeholder="Anzahl der Tickets" required>
-              <mat-hint>
-                <span [hidden]="!(formErrors.ticketcount)">
-                  {{formErrors.ticketcount}}</span>
-              </mat-hint>
-            </mat-form-field>
-
-          </p>
-
-          <button style="margin: 100 auto;float: right; font-size: 20px" class="formElement" type="submit" mat-button class="background-primary" [disabled]="feedbackForm.invalid" >Bestellung kostenpflichtig abschicken</button>
-        </form>
-
-        <div *ngIf="submittedFeedback">
-            <h2>Wir haben deine Bestellung erhalten, Vielen Dank! Wir melden uns bei dir in Kürze.</h2>
-            <p>Vorname: {{submittedFeedback.firstname}}</p>
-            <p>Nachname: {{submittedFeedback.lastname}}</p>
-            <p>E-Mail: {{submittedFeedback.email}}</p>
-            <p>Adresse: {{submittedFeedback.address}}</p>
-            <p>Anzahl der Entenlose: {{submittedFeedback.ticketcount}}</p>
-        </div>
+      <div style="padding: 0;">
+        <iframe id="eventim-light-iframe-v2-65e594452a65fb7a6f8f1441" src="https://www.eventim-light.com/at/a/65e594452a65fb7a6f8f1441/iframe/" width="100%" height="990px" data-scroll="true" data-scroll-offset-y="0" scrolling="yes" frameborder="0" name="eventim-light-iframe-v2-65e594452a65fb7a6f8f1441"></iframe><script type="text/javascript" src="https://www.eventim-light.com/at/a/65e594452a65fb7a6f8f1441/public/iframe/el-shop.js"></script>
       </div>
-
-
 
 </div>
 <br>
