feat(championship): Add game result

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -114,6 +114,10 @@
     6. Runde - STT Pichler : HV TDP Stainz 3:1
   </p>
 
+  <p class="small">
+    Testspiel - HV TDP Stainz: GSV St. Oswald bei Plankenwarth 12:0
+  </p>
+
   <!--
   <br>
 
