feat(champ): Update content

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -69,6 +69,44 @@
 <div *ngIf="season == '2023-2024'">
 
   <p class="normal">
+    <b>Spieltermine Frühjahr 2024:</b>
+  </p>
+
+  <p class="normal">
+    8. Runde - FREITAG, 03.05.2024 - 19:00 Uhr - Sportplatz Stainz - HV TDP Stainz : STT Pichler
+  </p>
+
+  <p class="normal">
+    10. Runde - MITTWOCH, 08.05.2024 - 19:30 Uhr - Sportplatz Stainz - HV TDP Stainz : SV Geistthal
+  </p>
+
+  <p class="normal">
+    9. Runde - SAMSTAG, 11.05.2024 - 16:30 Uhr - Sportplatz Stainz - HV TDP Stainz : SK Hohenburg
+  </p>
+
+  <p class="normal">
+    13. Runde - SAMSTAG, 18.05.2024 - 16:30 Uhr - Sportplatz Stainz - HV TDP Stainz : FC St. Johann/Köppling
+  </p>
+
+  <p class="normal">
+    11. Runde - SAMSTAG, 25.05.2024 - 19:00 Uhr - Voitsberg - STT Multitask : HV TDP Stainz
+  </p>
+
+  <p class="normal">
+    Cup Halbfinale - MITTWOCH, 29.05.2024 - 19:00 Uhr - Sportplatz Stainz - HV TDP Stainz : STT Fürndörfler
+  </p>
+
+  <p class="normal">
+    12. Runde - SAMSTAG, 08.06.2024 - 19:00 Uhr - Sportplatz Ligist - HV TDP Stainz : STT Wörgötter
+  </p>
+
+  <p class="normal">
+    SAMSTAG, 15.06.2024 - Sirnitz (Kärnten) - Hinti-Cup
+  </p>
+
+  <hr>
+
+  <p class="normal">
     <b>Unsere Torschützen:</b>
   </p>
 
@@ -116,6 +154,10 @@
 
   <p class="small">
     Testspiel - HV TDP Stainz: GSV St. Oswald bei Plankenwarth 12:0
+  </p>
+
+  <p class="small">
+    Testspiel - HV TDP Stainz: HFC Graz 8:1
   </p>
 
   <!--
