feat(championship): Update content

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -73,10 +73,6 @@
   </p>
 
   <p class="normal">
-    8. Runde - FREITAG, 03.05.2024 - 19:00 Uhr - Sportplatz Stainz - HV TDP Stainz : STT Pichler
-  </p>
-
-  <p class="normal">
     10. Runde - MITTWOCH, 08.05.2024 - 19:30 Uhr - Sportplatz Stainz - HV TDP Stainz : SV Geistthal
   </p>
 
@@ -158,6 +154,10 @@
 
   <p class="small">
     Testspiel - HV TDP Stainz: HFC Graz 8:1
+  </p>
+
+  <p class="small">
+    8. Runde - HV TDP Stainz : STT Pichler 4:1
   </p>
 
   <!--
