feat(championship): Update content

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -77,10 +77,6 @@
   </p>
 
   <p class="normal">
-    9. Runde - SAMSTAG, 11.05.2024 - 16:30 Uhr - Sportplatz Stainz - HV TDP Stainz : SK Hohenburg
-  </p>
-
-  <p class="normal">
     13. Runde - SAMSTAG, 18.05.2024 - 16:30 Uhr - Sportplatz Stainz - HV TDP Stainz : FC St. Johann/Köppling
   </p>
 
@@ -158,6 +154,10 @@
 
   <p class="small">
     8. Runde - HV TDP Stainz : STT Pichler 4:1
+  </p>
+
+  <p class="small">
+    9. Runde - HV TDP Stainz : SK Hohenburg 3:0
   </p>
 
   <!--
