--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -66,7 +66,7 @@
         <button mat-menu-item routerLink="/goaloftheseason/2023">Tor der Saison 2023</button>
       </mat-menu>
 
-      <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting Eleven</button>
+      <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting 11</button>
 
       <!-- <button mat-menu-item routerLink="/halloffame" routerLinkActive="active"><span class="fa fa-award fa-sm"></span> Hall of Fame</button> -->
     </mat-menu>
@@ -137,7 +137,7 @@
             <button mat-menu-item routerLink="/hallofpapp" routerLinkActive="active"><span class="fa fa-users fa-sm"></span> Hall of Papp-Fans</button>
             <button mat-menu-item routerLink="/surveys" routerLinkActive="active"><span class="fa fa-list-ol fa-sm"></span> Umfragen</button>
 
-            <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting Eleven</button>
+            <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting 11</button>
 
             <!-- <button mat-menu-item routerLink="/halloffame" routerLinkActive="active"><span class="fa fa-award fa-sm"></span> Hall of Fame</button> -->
       </mat-menu>
