feat(championship): Update content

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -73,19 +73,7 @@
   </p>
 
   <p class="normal">
-    10. Runde - MITTWOCH, 08.05.2024 - 19:30 Uhr - Sportplatz Stainz - HV TDP Stainz : SV Geistthal
-  </p>
-
-  <p class="normal">
     13. Runde - SAMSTAG, 18.05.2024 - 16:30 Uhr - Sportplatz Stainz - HV TDP Stainz : FC St. Johann/Köppling
-  </p>
-
-  <p class="normal">
-    11. Runde - SAMSTAG, 25.05.2024 - 19:00 Uhr - Voitsberg - STT Multitask : HV TDP Stainz
-  </p>
-
-  <p class="normal">
-    Cup Halbfinale - MITTWOCH, 29.05.2024 - 19:00 Uhr - Sportplatz Stainz - HV TDP Stainz : STT Fürndörfler
   </p>
 
   <p class="normal">
@@ -158,6 +146,18 @@
 
   <p class="small">
     9. Runde - HV TDP Stainz : SK Hohenburg 3:0
+  </p>
+
+  <p class="small">
+    10. Runde - HV TDP Stainz : SV Geistthal 3:0 (strafverifiziert)
+  </p>
+
+  <p class="small">
+    11. Runde - STT Multitask : HV TDP Stainz 3:4
+  </p>
+
+  <p class="normal">
+    Cup Halbfinale - HV TDP Stainz : STT Fürndörfler 0:4
   </p>
 
   <!--
