feat(goldenshot): Implement voting

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,10 @@ $divider-color:        #BDBDBD;
     padding: $pad-up-down $pad-left-right;
 }
 
+.hvtdp-padding {
+  padding: 4px;
+}
+
 .background-primary {
     background-color: $background-dark!important;
 }
