--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,6 +8,8 @@
       <button mat-menu-item routerLink="/news" routerLinkActive="active"><span class="fa fa-bookmark fa-sm"></span> News</button>
       <button mat-menu-item routerLink="/team" routerLinkActive="active"><span class="fa fa-portrait fa-sm"></span> Mannschaft</button>
 
+      <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting 11</button>
+
       <button mat-menu-item [matMenuTriggerFor]="championship"><span class="fa fa-bookmark fa-sm"></span> Meisterschaft</button>
       <mat-menu #championship="matMenu">
         <button mat-menu-item routerLink="/championship/2023-2024">Saison 2023/2024</button>
@@ -16,7 +18,8 @@
       </mat-menu>
 
       <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button>
-      <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button>
+      <!-- <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button> -->
+      <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button>
 
       <!-- <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button> -->
 
@@ -66,8 +69,6 @@
         <button mat-menu-item routerLink="/goaloftheseason/2023">Tor der Saison 2023</button>
       </mat-menu>
 
-      <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting 11</button>
-
       <!-- <button mat-menu-item routerLink="/halloffame" routerLinkActive="active"><span class="fa fa-award fa-sm"></span> Hall of Fame</button> -->
     </mat-menu>
 
@@ -77,6 +78,8 @@
       <button mat-menu-item routerLink="/news" routerLinkActive="active"><span class="fa fa-bookmark fa-sm"></span> News</button>
       <button mat-menu-item routerLink="/team" routerLinkActive="active"><span class="fa fa-portrait fa-sm"></span> Mannschaft</button>
 
+      <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting 11</button>
+
       <button mat-menu-item [matMenuTriggerFor]="championship"><span class="fa fa-bookmark fa-sm"></span> Meisterschaft</button>
       <mat-menu #championship="matMenu">
         <button mat-menu-item routerLink="/championship/2023-2024">Saison 2023/2024</button>
@@ -85,7 +88,8 @@
       </mat-menu>
 
       <button mat-menu-item routerLink="/10-jahre-hvtdp" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> 10-Jahresjubiläum</button>
-      <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button>
+      <!-- <button mat-menu-item routerLink="/torschusschallenge" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge</button> -->
+      <button mat-menu-item routerLink="/torschusschallenge-voting" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Torschuss Challenge </button>
 
       <!--  <button mat-menu-item routerLink="/entenlauf" routerLinkActive="active"><span class="fa fa-shopping-cart fa-sm"></span> Entenlauf</button> -->
 
@@ -136,8 +140,6 @@
       <mat-menu x-position="before" #more="matMenu">
             <button mat-menu-item routerLink="/hallofpapp" routerLinkActive="active"><span class="fa fa-users fa-sm"></span> Hall of Papp-Fans</button>
             <button mat-menu-item routerLink="/surveys" routerLinkActive="active"><span class="fa fa-list-ol fa-sm"></span> Umfragen</button>
-
-            <button mat-menu-item routerLink="/startingeleven" routerLinkActive="active"><span class="fa fa-futbol fa-sm"></span> Starting 11</button>
 
             <!-- <button mat-menu-item routerLink="/halloffame" routerLinkActive="active"><span class="fa fa-award fa-sm"></span> Hall of Fame</button> -->
       </mat-menu>
