feat(championship): update content

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -73,11 +73,7 @@
   </p>
 
   <p class="normal">
-    13. Runde - SAMSTAG, 18.05.2024 - 16:30 Uhr - Sportplatz Stainz - HV TDP Stainz : FC St. Johann/Köppling
-  </p>
-
-  <p class="normal">
-    12. Runde - SAMSTAG, 08.06.2024 - 19:00 Uhr - Sportplatz Ligist - HV TDP Stainz : STT Wörgötter
+    13. Runde - DIENSTAG, 18.06.2024 - 19:00 Uhr - Sportplatz Stainz - HV TDP Stainz : FC St. Johann/Köppling
   </p>
 
   <p class="normal">
@@ -158,6 +154,11 @@
 
   <p class="normal">
     Cup Halbfinale - HV TDP Stainz : STT Fürndörfler 0:4
+  </p>
+
+
+  <p class="normal">
+    12. Runde - STT Wörgötter : HV TDP Stainz 3:0
   </p>
 
   <!--
